--- a/SingleStoryboard/VIPER Module.xctemplate/TemplateInfo.plist
+++ b/SingleStoryboard/VIPER Module.xctemplate/TemplateInfo.plist
@@ -16,6 +16,31 @@
 		<array>
 			<string>com.apple.platform.iphoneos</string>
 		</array>
+		<key>Options</key>
+  		<array>
+    		<dict>
+			<key>Description</key>
+			<string>The name of the module to create</string>
+			<key>Identifier</key>
+			<string>moduleName</string>
+			<key>Name</key>
+			<string>New Module Name:</string>
+			<key>NotPersisted</key>
+			<true/>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>text</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_moduleName___</string>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+    </array>
 		<key>Summary</key>
 		<string>Create VIPER files for a module.</string>
 	</dict>
